# find

./: .gitignore  CMakeLists.txt  a.out  argp.h  find  find.c  find.h  getopt.c  getopt.h  knuthMorrisPratt.c  knuthMorrisPratt.h  main.c  makefile  parole.txt  percorsi.txt  readme.md  report.c  report.h  report.txt  res.txt  res1.txt  testo.txt
TEST/: paths.txt  words.txt
TEST/EXAMPLE_FIND/: marzo1821.txt
cerca/1/: 5maggio.txt  test.txt
