# CMakeList.txt: progetto CMake per find. Includere l'origine e definire
# qui la logica specifica del progetto.
#
cmake_minimum_required (VERSION 3.8)

# Aggiungere l'origine all'eseguibile di questo progetto.
add_executable (find "find.c" "find.h")

# TODO: Aggiungere i test e, se necessario, installare le destinazioni.
